@@ -11,8 +11,6 @@ import ru.nsu.usoltsev.auto_parts_store.model.mapper.SupplierMapper;
 import ru.nsu.usoltsev.auto_parts_store.repository.SupplierRepository;
 
 import java.sql.Timestamp;
-import java.time.LocalDate;
-import java.time.format.DateTimeFormatter;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -44,15 +42,17 @@ public class SupplierService {
     public List<SupplierDto> getSuppliersByItemCategory(String category) {
         return supplierRepository.findSuppliersByItemCategory(category)
                 .stream()
-                .map(SupplierMapper.INSTANCE::toDto)
-                .collect(Collectors.toList());
+                .map(row -> new SupplierDto(
+                        (String) row[0],
+                        (String) row[1],
+                        (String) row[2],
+                        (Boolean) row[3]
+                ))
+                .toList();
     }
 
     public SupplierByTypeDto getSuppliersByType(String type) {
-        List<SupplierDto> supplierDtos = supplierRepository.findSuppliersByType(type)
-                .stream()
-                .map(SupplierMapper.INSTANCE::toDto)
-                .toList();
+        List<SupplierDto> supplierDtos = supplierRepository.findSuppliersByType(type);
         Integer count = supplierRepository.findSuppliersCountByType(type);
         return new SupplierByTypeDto(supplierDtos, count);
     }
@@ -60,9 +60,6 @@ public class SupplierService {
     public List<SupplierDto> getSuppliersByDelivery(String fromDate, String toDate, Integer amount, String item) {
         Timestamp fromTime = Timestamp.valueOf(fromDate);
         Timestamp toTime = Timestamp.valueOf(toDate);
-        return supplierRepository.findSuppliersByDelivery(fromTime, toTime, amount, item)
-                .stream()
-                .map(SupplierMapper.INSTANCE::toDto)
-                .collect(Collectors.toList());
+        return supplierRepository.findSuppliersByDelivery(fromTime, toTime, amount, item);
     }
 }
